--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,10 @@
+---
+import Header from "../components/Header.astro";
+import "@fontsource-variable/onest"
+---
+
 <!doctype html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
@@ -8,15 +13,25 @@
 		<title>Astro Basics</title>
 	</head>
 	<body>
+
+		<Header />
 		<slot />
 	</body>
 </html>
 
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
+<style is:global>
+	:root{
+		color-scheme: ligth dark;
 	}
+	html{
+		font-family: "Onest Variable",system-ui, sans-serif;
+	}
+	body{
+		background: linear-gradient(black, rgb(83, 83, 83), rgb(185, 185, 185));
+		height: 100vh;
+		margin: 0;
+		display: flex;
+		justify-content: center;
+	}
+	
 </style>
