--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,12 @@
 ---
 import Header from "../components/Header.astro";
 import "@fontsource-variable/onest"
+
+interface Props {
+	title: string
+}
+
+const { title } = Astro.props
 ---
 
 <!doctype html>
@@ -10,7 +16,7 @@ import "@fontsource-variable/onest"
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>{title}</title>
 	</head>
 	<body>
 
