--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,12 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Badge from '../components/Badge.astro'
+import Layout from '../layouts/Layout.astro'
+import Card from '..components/Card.astro'
 ---
 
 <Layout title="Welcom to Astro.">
-	<main></main>
+	<main>
+		<h1>Hola! Soy Camilo Gómez<Badge>Disponible para trabajar</Badge></h1>
+		<h2>Soy estudiante con conocimientos en desarrollo web y manejo de datos con SQL. De Bogota, Colombia Aunque tengo poca experiencia, estoy enfocado en aprender y crecer en el campo de la tecnología.</h2>
+	</main>
 </Layout>
