--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,14 +1,10 @@
-<header class="felx justify-between items-center py-5 w-[1120px]">
-    <img 
-    class="rounded-full w-12 h-12" 
-    src="https://elcomercio.pe/resizer/v2/O6CLWZRZONECZJPPYPSQNXGRXQ.jpg?auth=d8f900eb53b12905915530ad0a3a2c38f09d12b168922cf68447217b07d26e60&width=1200&height=810&quality=90&smart=true" 
-    alt="CamiloG"
-    />
-
-    <nav class="flex flex-row gap-x-10 opacity-80">
-        <a href="/">Home</a>
-        <a href="/about">About</a>
-        <a href="/projects">Projects</a>
-        <a href="/contact">Contact</a>
-    </nav>
-</header>
+<div class="px-5">
+    <header class="flex justify-center items-center py-5 w-full max-w-[1120px] mx-auto">
+        <nav class="flex flex-row gap-x-10 opacity-80">
+            <a href="/">Home</a>
+            <a href="/about">About</a>
+            <a href="/projects">Projects</a>
+            <a href="/contact">Contact</a>
+        </nav>
+    </header>
+</div>
