--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,34 @@
 ---
 import Badge from '../components/Badge.astro'
 import Layout from '../layouts/Layout.astro'
-import Card from '..components/Card.astro'
+//import Card from '..components/Card.astro'
 ---
 
 <Layout title="Welcom to Astro.">
 	<main>
-		<h1>Hola! Soy Camilo Gómez<Badge>Disponible para trabajar</Badge></h1>
-		<h2>Soy estudiante con conocimientos en desarrollo web y manejo de datos con SQL. De Bogota, Colombia Aunque tengo poca experiencia, estoy enfocado en aprender y crecer en el campo de la tecnología.</h2>
+
+		<section class="w-full lg:w-[740px] mx-auto py-10">
+			<img 
+            class="rounded-full w-35 h-20" 
+			src="/src/assets/3x4 2432 (1).jpg"  
+            alt="Camilo dev"
+        />
+			<h1 class="text-white text-5xl font-bold flex flex-row gap-x-4 pb-10">
+				Hola! Soy Camilo Gómez <a 
+				href="https://www.linkedin.com/in/camilogdev"
+				target="_blank"
+				rel="noopener"
+				class="flex justify-center items-center"
+				>
+
+					<Badge>Disponible para trabajar</Badge> 
+				</a>
+			</h1>
+			<h2 class="text-1xl opacity-80">
+				Con conocimientos en desarrollo web y manejo de datos con SQL, estoy enfocado en crecer en el campo de la tecnología, aportando soluciones innovadoras y aprendiendo constantemente para fortalecer mis habilidades.
+			</h2>
+
+			<ul></ul>
+		</section>
 	</main>
 </Layout>
