Fonod, foto y estilos

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,8 +9,8 @@ import Layout from '../layouts/Layout.astro'
 
 		<section class="w-full lg:w-[740px] mx-auto py-10">
 			<img 
-            class="rounded-full w-35 h-20" 
-			src="/src/assets/3x4 2432 (1).jpg"  
+            class="rounded-full w-25 h-24 object-cover" 
+			src="/src/assets/Foto Camilodev.jpg"  
             alt="Camilo dev"
         />
 			<h1 class="text-white text-5xl font-bold flex flex-row gap-x-4 pb-10">
@@ -24,9 +24,13 @@ import Layout from '../layouts/Layout.astro'
 					<Badge>Disponible para trabajar</Badge> 
 				</a>
 			</h1>
-			<h2 class="text-1xl opacity-80">
-				Con conocimientos en desarrollo web y manejo de datos con SQL, estoy enfocado en crecer en el campo de la tecnología, aportando soluciones innovadoras y aprendiendo constantemente para fortalecer mis habilidades.
-			</h2>
+			<h2 class="text-2xl text-wrap">
+				<span>Con conocimientos en </span>
+				<span class="text-yellow-200/90"> desarrollo web y manejo de datos con SQL.</span>
+				De Bogotá, Colombia. Estoy enfocado en fortalecer mis <span class="text-cyan-300/90">habilidades y aportar soluciones innovadoras</span> en el campo 
+				<span class="text-red-400/90"> del desarrollo de software </span>
+				<span class="opacity-80">, aprendiendo de manera continua para afrontar nuevos desafíos.</span>
+			  </h2>
 
 			<ul></ul>
 		</section>
