Se agregan primer enlace

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Badge from '../components/Badge.astro'
 import Layout from '../layouts/Layout.astro'
 //import Card from '..components/Card.astro'
+import LinkedInIcon from '../components/icons/LinkedIn.astro'
 ---
 
 <Layout title="Welcom to Astro.">
@@ -27,12 +28,18 @@ import Layout from '../layouts/Layout.astro'
 			<h2 class="text-2xl text-wrap">
 				<span>Con conocimientos en </span>
 				<span class="text-yellow-200/90"> desarrollo web y manejo de datos con SQL.</span>
-				De Bogotá, Colombia. Estoy enfocado en fortalecer mis <span class="text-cyan-300/90">habilidades y aportar soluciones innovadoras</span> en el campo 
-				<span class="text-red-400/90"> del desarrollo de software </span>
-				<span class="opacity-80">, aprendiendo de manera continua para afrontar nuevos desafíos.</span>
+				de Bogotá, Colombia. Estoy enfocado en fortalecer mis <span class="text-cyan-300/90">habilidades y aportar soluciones innovadoras</span> en el campo 
+				<span class="text-red-400/90"> del desarrollo de software</span><span class="opacity-80">, aprendiendo de manera continua para afrontar nuevos desafíos.</span>
 			  </h2>
 
-			<ul></ul>
+			<ul>
+				<li>
+					<a href="https://www.linkedin.com/in/camilogdev">
+						<LinkedInIcon class="w-6 h-6" />
+						LinkedIn
+					</a>
+				</li>
+			</ul>
 		</section>
 	</main>
 </Layout>
