Se agrega boton de LinkeldIn y de GitHub

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,8 @@ import Badge from '../components/Badge.astro'
 import Layout from '../layouts/Layout.astro'
 //import Card from '..components/Card.astro'
 import LinkedInIcon from '../components/icons/LinkedIn.astro'
+import SocialPill from '../components/icons/SocialPill.astro'
+import GithubIcon from '../components/icons/Github.astro'
 ---
 
 <Layout title="Welcom to Astro.">
@@ -30,16 +32,18 @@ import LinkedInIcon from '../components/icons/LinkedIn.astro'
 				<span class="text-yellow-200/90"> desarrollo web y manejo de datos con SQL.</span>
 				de Bogotá, Colombia. Estoy enfocado en fortalecer mis <span class="text-cyan-300/90">habilidades y aportar soluciones innovadoras</span> en el campo 
 				<span class="text-red-400/90"> del desarrollo de software</span><span class="opacity-80">, aprendiendo de manera continua para afrontar nuevos desafíos.</span>
-			  </h2>
+			</h2>
 
-			<ul>
-				<li>
-					<a href="https://www.linkedin.com/in/camilogdev">
+			<nav class="list-none flex gap-x-2">
+					<SocialPill href="https://www.linkedin.com/in/camilogdev">
 						<LinkedInIcon class="w-6 h-6" />
-						LinkedIn
-					</a>
-				</li>
-			</ul>
+						LinkedIn	
+					</SocialPill>
+					<SocialPill href="https://github.com/CamAGomezB27?tab=repositories">
+						<GithubIcon class="w-6 h-6" />
+						GitHub
+					</SocialPill>	
+			</nav>
 		</section>
 	</main>
 </Layout>
