Se agrega experencia laboral

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -39,7 +39,7 @@ const {description, title } = Astro.props
 	}
 	body{
 		background: linear-gradient(black, rgb(83, 83, 83), rgb(185, 185, 185));
-		height: 100vh;
+		min-height: 100vh;
 		margin: 0;
 		display: flex;
 		flex-direction: column;
