Se agrega información de experencia

--- a/src/components/Experencia.astro
+++ b/src/components/Experencia.astro
@@ -4,22 +4,24 @@ import ExperenciaItem from "./ExperenciaItem.astro"
 
 const EXPERENCIE = [
     {
-        date: 'Enero 2025',
-        title: 'Experencia',
-        description: 'Hola',
-        link:'fdgfdsfgdg'
+        date: 'Ene 2025 - Presente',
+        title: 'Sodimac Corona | Home center, Bogotá d.c',
+        description: 'Practicante Universitario Desarrollo y Automatización, diseño y desarrollo de soluciones web con HTML, CSS y JavaScript, automatizado procesos con Python y optimizado tareas operativas para mejorar la eficiencia del equipo.',
+    },
+    {
+        date: 'Nov 2023 - Ene 2025',
+        title: 'One Contact S.A.S,  Bogotá D.C',
+        description: 'Asesor Comercial, asesoramiento personalizado a clientes, gestión de comunicaciones multicanal (llamadas, chats y correos), análisis de necesidades para ofrecer soluciones adecuadas, cierre de ventas con seguimiento posventa y coordinación con equipos internos para garantizar la satisfacción del cliente.',
+    },
+    {
+        date: 'Nov 2022',
+        title: 'Asesoría & Gestión, Bogotá D.C',
+        description: 'Apoyo a monitoreo y verificación de la información, control y monitoreo de información, manejo de sistemas informáticos, mantenimiento de bases de datos y registros, además de la elaboración de informes, reportes y gestión de documentación y archivos.',
     },
     {
         date: 'Enero 2025',
         title: 'Experencia',
         description: 'Hola',
-        link:'fdgfdsfgdg'
-    },
-    {
-        date: 'Enero 2025',
-        title: 'Experencia',
-        description: 'Hola',
-        link:'fdgfdsfgdg'
     }
 ]
 ---
