se agregan mejoras

--- a/src/components/Experencia.astro
+++ b/src/components/Experencia.astro
@@ -4,7 +4,7 @@ import ExperenciaItem from "./ExperenciaItem.astro"
 
 const EXPERENCIE = [
     {
-        date: 'Ene 2025 - Presente',
+        date: 'Actualmente...',
         title: 'Sodimac Corona | Home center, Bogotá d.c',
         description: 'Practicante Universitario Desarrollo y Automatización, diseño y desarrollo de soluciones web con HTML, CSS y JavaScript, automatizado procesos con Python y optimizado tareas operativas para mejorar la eficiencia del equipo.',
     },
@@ -21,7 +21,7 @@ const EXPERENCIE = [
 ]
 ---
 
-<ol class="relative border-s border-gray-200 dark:border-gray-700">
+<ol class="relative border-s border-gray-200 ml-3">
     {
         EXPERENCIE.map(experiencie => (
         <li class="mb-10 ms-4">
