--- a/src/components/Experenciap.astro
+++ b/src/components/Experenciap.astro
@@ -5,13 +5,13 @@ import ExperenciaItem from "./ExperenciaItem.astro"
 const EXPERENCIE = [
     {
         date: 'Ene 2021 - Presente',
-        title: 'Desarrollo de Proyectos academicos',
+        title: 'Desarrollo de Proyectos Academicos',
         description: 'He desarrollado un e-commerce completo con integración de un módulo de Business Intelligence, utilizando HTML, CSS,JavaScript y bases de datos relacionales como Postgres, MariaDB y MySQL. Además, he creado múltiples páginas web con diseño frontend responsivo y funcionalidad básica en backend utilizando Node.js y sistemas CRUD. He implementado análisisde datos y generación de reportes interactivos con Power BI, optimizando la toma de decisiones en proyectos simulados.Todo mi trabajo ha sido realizado bajo metodologías ágiles (Scrum), gestionando proyectos con herramientas como Jira yFigma para el diseño colaborativo y el seguimiento de tareas. También tengo experiencia en la configuración y manejo debases de datos en entornos locales y servidores, con conocimientos en SQL, Postgres, Workbench, comandos en MariaDB yadministración de Django en proyectos iniciales.'
     }
 ]
 ---
 
-<ol class="relative border-s border-gray-200 dark:border-gray-700">
+<ol class="relative border-s border-gray-200 ml-3">
     {
         EXPERENCIE.map(experiencie => (
         <li class="mb-10 ms-4">
