--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -61,7 +61,7 @@ import Briefcase from '../components/icons/Briefcase.astro'
 			</nav>
 		</SectionContainer>
 
-		<SectionContainer>
+		<SectionContainer id="experiencia">
 			<h2 class="text-2xl font-semibold mb-5 flex gap-x-3 items-center">
 				<Briefcase class="size-6"/>
 				Experencia Laboral
