--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,7 @@ import Experencia from '../components/Experencia.astro'
 import Experenciap from '../components/Experenciap.astro'
 import SectionContainer from '../components/SectionContainer.astro'
 import Briefcase from '../components/icons/Briefcase.astro'
+import CodeIcon from "../components/icons/Code.astro"
 ---
 
 <Layout 
@@ -18,7 +19,7 @@ import Briefcase from '../components/icons/Briefcase.astro'
 	>
 
 
-	<main>
+	<main class="px-4">
 		<SectionContainer class="py-40 pb-20">
 			<div class="rounded-full w-24 h-24 overflow-hidden">
 				<img 
@@ -27,7 +28,7 @@ import Briefcase from '../components/icons/Briefcase.astro'
 					alt="Camilo dev"
 				/>
 			</div>
-			<h1 class="text-white text-5xl font-bold flex flex-row gap-x-4 pb-10">
+			<h1 class="text-white text-3xl md:text-4xl lg:text-5xl font-bold flex flex-row gap-x-4 pb-6 lg:pb-10">
 				Hola! Soy Camilo Gómez <a 
 				href="https://www.linkedin.com/in/camilogdev"
 				target="_blank"
@@ -38,24 +39,24 @@ import Briefcase from '../components/icons/Briefcase.astro'
 					<Badge>Disponible para trabajar</Badge> 
 				</a>
 			</h1>
-			<h2 class="text-2xl text-wrap">
+			<h2 class=" text-xl lg:text-2xl text-wrap max-w-[700px]">
 				<span>Con conocimientos en </span>
 				<span class="text-yellow-200/90"> desarrollo web y manejo de datos con SQL.</span>
 				de Bogotá, Colombia. Estoy enfocado en fortalecer mis <span class="text-cyan-300/90">habilidades y aportar soluciones innovadoras</span> en el campo 
 				<span class="text-red-400/90"> del desarrollo de software</span><span class="opacity-80">, aprendiendo de manera continua para afrontar nuevos desafíos.</span>
 			</h2>
 
-			<nav class="list-none flex gap-x-4 mt-8">
+			<nav class="list-none flex gap-4 mt-8 flex-wrap">
 					<SocialPill href="https://www.linkedin.com/in/camilogdev">
-						<LinkedInIcon class="size-6" />
+						<LinkedInIcon class="size-4 md:size-6" />
 						LinkedIn	
 					</SocialPill>
 					<SocialPill href="https://github.com/CamAGomezB27?tab=repositories">
-						<GithubIcon class="size-6" />
+						<GithubIcon class="size-4 md:size-6" />
 						GitHub
 					</SocialPill>
 					<SocialPill href="mailto:camigomezbernal@gmail.com">
-						<MailIcon class="size-6" />
+						<MailIcon class="size-4 md:size-6" />
 						camigomezbernal@gmail.com
 					</SocialPill>
 			</nav>
@@ -74,6 +75,12 @@ import Briefcase from '../components/icons/Briefcase.astro'
 				Experencia Personal
 			</h2>
 			<Experenciap />
+		</SectionContainer>
+		<SectionContainer>
+			<h2 class="text-2xl font-semibold mb-5 flex gap-x-3 items-center">
+				<CodeIcon class="size-6"/>
+				Proyectos
+			</h2>
 		</SectionContainer>
 	</main>
 </Layout>
