Se agregan proyectos

--- a/src/components/Experencia.astro
+++ b/src/components/Experencia.astro
@@ -5,7 +5,7 @@ import ExperenciaItem from "./ExperenciaItem.astro"
 const EXPERENCIE = [
     {
         date: 'Actualmente...',
-        title: 'Sodimac Corona | Home center, Bogotá d.c',
+        title: 'Sodimac Corona | Home center, Bogotá D.C',
         description: 'Practicante Universitario Desarrollo y Automatización, diseño y desarrollo de soluciones web con HTML, CSS y JavaScript, automatizado procesos con Python y optimizado tareas operativas para mejorar la eficiencia del equipo.',
     },
     {
