--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@
         <nav class="flex flex-row gap-x-10 opacity-80">
             <a href="#top">Inicio</a>
             <a href="#experiencia">Experiencia</a>
-            <a href="/#poryectos">Proyectos</a>
+            <a href="/#proyectos">Proyectos</a>
             <a href="#sobre-mi">Sobre mi</a>
             <a href="/#contacto">Contacto</a>
         </nav>
